# HPC-MPM-Code

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  MPM_main.cpp  Makefile  README.md
.agents/skills/: mpm-code-fluid.md  mpm-code-petsc.md  mpm-code-reference.md  mpm-code-solid.md  mpm-code-workflow.md
cmake/: BuildHDF5.cmake  BuildPETSc.cmake  options.cmake
data/: CMakeLists.txt  Makefile  README.md  data_generator.cpp  data_generator.h  data_main.cpp  output_util.cpp  output_util.h  para_input_data.txt
data/divide/: CMakeLists.txt  Makefile  data_partitioner.cpp  data_partitioner.h  divide_main.cpp  partition_module.cpp  partition_module.h
data/divide/divide_fluid/: CMakeLists.txt  divide.cpp  fluid_divider.cpp  fluid_divider.h  makdivide.cpp  para_input_data.txt  partition_data_IO.cpp
data/divide/divide_fsi/: CMakeLists.txt  divide.cpp  fsi_divider.cpp  fsi_divider.h  makdivide.cpp  para_input_data.txt  partition_data_IO.cpp
data/divide/divide_solid/: CMakeLists.txt  divide.cpp  makdivide.cpp  para_input_data.txt  partition_data_IO.cpp  solid_divider.cpp  solid_divider.h
data/fluid/: CMakeLists.txt  fluid_generator.cpp  griddata.txt  makinput.cpp  wpdata.txt
data/fsi/: CMakeLists.txt  fsi_generator.cpp  input.txt  makinput.cpp  pointdata.txt
data/generate/: CMakeLists.txt  data_generator.cpp  data_generator.h  output_util.cpp  output_util.h
data/generate/fluid/: CMakeLists.txt  fluid_generator.cpp  fluid_generator.h  input.txt
data/generate/fsi/: CMakeLists.txt  fsi_generator.cpp  fsi_generator.h
data/generate/solid/: CMakeLists.txt  solid_generator.cpp  solid_generator.h
data/solid/: CMakeLists.txt  griddata.txt  input.txt  makinput.cpp  solid_generator.cpp  solid_generator.h  spdata.txt
docs/superpowers/plans/: 2026-06-11-parallel-vtu-pvtu-output.md  2026-06-12-hdf5-autobuild.md  2026-06-12-vtk-hdf5-output.md  2026-06-13-data-cmake-oop-refactor.md
docs/superpowers/specs/: 2026-06-12-hdf5-autobuild-design.md  2026-06-13-data-cmake-oop-design.md
module/: CMakeLists.txt  bc.cpp  bc.h  cal_mat.h  contact.cpp  contact.h  data_io.cpp  data_io.h  dataset.h  map_and_interpolate.cpp  map_and_interpolate.h  material_point.cpp  material_point.h  mesh.cpp  mesh.h  mpi_data.cpp  mpi_data.h  nonlinear_time_integration.cpp  particle_shifting.cpp  particle_shifting.h  relaxation.cpp  relaxation.h  shape_function.cpp  shape_function.h  vtk.cpp  vtk.h  vtk_hdf5.h  vtk_hdf5_mpm.h
module/fluid/: CMakeLists.txt
module/fluid/FEM/: CMakeLists.txt  README.md  fluid_fem_data_io.cpp  phase_field.cpp  solve_ns_fem.cpp  stabilized_fem.h
module/fluid/MPM/: CMakeLists.txt  fluid_material_point.cpp  fluid_mpm_data_io.cpp  fluid_point_inflow.cpp  solve_ns_mpm.cpp  stabilized_mpm.h  var_trans_fluid.cpp
module/solid/: CMakeLists.txt  constitutive_model.cpp  constitutive_model.h  constitutive_model.md  solid_data_io.cpp  solid_material_point.cpp  solid_material_point.h
module/solid/explicit/: CMakeLists.txt  fbar_projection.cpp  fbar_projection.h  solve_solid_explicit.cpp  var_trans_solid_explicit.cpp
module/solid/implicit/: CMakeLists.txt  README.md  implicit_mpm_solid.h  solve_solid_implicit.cpp  var_trans_solid_implicit.cpp
module/solver/: CMakeLists.txt  README.md  crsmat.cpp  crsmat.h  solver.cpp  solver.h
src_fluid/: CMakeLists.txt
src_fluid/MPM/: main.cpp
src_fsi/: bc_setting.cpp  block_fsi.cpp  block_fsi.h
src_solid/: CMakeLists.txt
src_solid/explicit/: datain_para.cpp  main.cpp
src_solid/implicit/: main.cpp  residual.cpp
tests/: test_hdf5.cpp  test_vtk_hdf5.cpp
work/: CMakeLists.txt
work/src_fluid/MPM/: datain_para.cpp  main.cpp
work/src_fsi/: CMakeLists.txt  datain_para.cpp  main.cpp
work/src_solid/: CMakeLists.txt
work/src_solid/explicit/: CMakeLists.txt
work/src_solid/implicit/: CMakeLists.txt  datain_para.cpp  main.cpp
