# ----------------------------------------------------------------------------
# Solver source selection
# ----------------------------------------------------------------------------

# Keep all candidate subdirectories visible here.
# Uncomment exactly the cases you want to build.
# add_subdirectory(src_fluid)
# add_subdirectory(src_solid)
add_subdirectory(src_fsi)
